--- a/Ace.Networking.csproj
+++ b/Ace.Networking.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFrameworks>netcoreapp1.1;net46</TargetFrameworks>
     <DefineConstants Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">CORE</DefineConstants>
   </PropertyGroup>
 
