--- a/Ace.Networking.csproj
+++ b/Ace.Networking.csproj
@@ -1,14 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
-    <DefineConstants Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">CORE</DefineConstants>
+    <TargetFramework>netstandard1.6</TargetFramework>
+    <DefineConstants>CORE</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MessagePack" Version="1.7.3.4" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
     <PackageReference Include="System.Net.Security" Version="4.3.1" />
     <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entanglement\Extensions\" />
   </ItemGroup>
 
 </Project>
