--- a/src/Ace.Networking.Entanglement/Ace.Networking.Entanglement.csproj
+++ b/src/Ace.Networking.Entanglement/Ace.Networking.Entanglement.csproj
@@ -4,6 +4,13 @@
     <TargetFrameworks>netstandard1.5;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.5'">
+    <DefineConstants>CORE15</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <DefineConstants>CORE20</DefineConstants>
+  </PropertyGroup>
+
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
