--- a/src/Ace.Networking.Entanglement/Ace.Networking.Entanglement.csproj
+++ b/src/Ace.Networking.Entanglement/Ace.Networking.Entanglement.csproj
@@ -27,5 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Ace.Networking\Ace.Networking.csproj" />
   </ItemGroup>
-
+  <PropertyGroup>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+  </PropertyGroup>
 </Project>
