--- a/src/Ace.Networking/Ace.Networking.csproj
+++ b/src/Ace.Networking/Ace.Networking.csproj
@@ -25,5 +25,7 @@
     <PackageReference Include="System.Net.Security" Version="4.3.2" />
     <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
   </ItemGroup>
-
+   <PropertyGroup>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+  </PropertyGroup>
 </Project>
