--- a/src/Ace.Networking/Ace.Networking.csproj
+++ b/src/Ace.Networking/Ace.Networking.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
